<resources>
    <string name="app_name">KhoaHM_Alarm</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="seconds">Seconds</string>
    <string name="minutes">Minutes</string>
    <string name="hours">Hours</string>
    <string name="colon">:</string>
    <string name="cancel">Cancel</string>
    <string name="default_number">00</string>
    <string name="start">Start</string>
    <string name="repeat_alarm">Repeat Alarm</string>
    <string name="str_ok">OK</string>
</resources>